--- a/static/todos.css
+++ b/static/todos.css
@@ -19,126 +19,216 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 body {
   line-height: 1;
   color: black;
-  background: white;
+  background-color: white;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.4em;
+  color: #333333;
 }
+
 ol, ul {
   list-style: none;
 }
+
 a img {
   border: none;
 }
 
-html {
-  background: #eeeeee;
+a {
+  color: darkblue;
+  text-decoration: none;
 }
-  body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.4em;
-    background: #eeeeee;
-    color: #333333;
-  }
+
+a:hover {
+  text-decoration: underline;
+}
+
+#account {
+  position: relative;
+  width: 100%;
+}
+
+#logout {
+  position: absolute;
+  right: 0;
+  top: 2em;
+}
 
 #todoapp {
-  width: 480px;
   margin: 0 auto 40px;
-  background: white;
   padding: 20px;
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+#todoapp h1 {
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  padding: 20px 0 30px 0;
+  line-height: 1;
+}
+
+#todos {
+  margin-top: 2em;
+}
+
+#todo-list {
+  padding: 3em;
+  background-color: #eeeeee;
+  min-height: 40em;
+  border: 1px solid #999999;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0 inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0 inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0 inset;
+}
+
+#create-todo {
+  position: relative;
+  width: 100%;
+}
+
+#create-todo input {
+  width: 366px;
+  font-size: 16px !important;
+  font-family: inherit;
+  line-height: 1.4em;
+  border: 0;
+  outline: none;
+  padding: 6px;
+  border: 1px solid #999999;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+}
+
+#create-todo #filter {
+  -moz-border-radius: 24px;
+  padding-left: 1ex;
+  margin-left: 2em;
+}
+
+#filter {
+  position: absolute;
+  right: 0;
+}
+
+#create-todo input::-webkit-input-placeholder {
+  font-style: italic;
+}
+
+#create-todo span {
+  position: absolute;
+  z-index: 999;
+  width: 170px;
+  left: 50%;
+  margin-left: -85px;
+}
+
+#todo-list {
+  list-style-type: none;
+  padding-top: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+  border: 1px;
+  overflow: auto;
+}
+
+/*#todo-list .cell {*/
+/*  margin: 13px;*/
+/*}*/
+
+#todo-list .cell.selected, #todo-list .cell.hover.selected {
+  background-color: #fffd7f;
+  /*margin-left: 1px;*/
+  /*margin-top: 1px;*/
+  /*margin-left: -2px;*/
+  margin-top: -2px;
+  /*padding-left: 2px;*/
+  -moz-transition-property: box-shadow, margin padding;
+  -moz-transition-duration: .1s;
+  -webkit-transition-property: box-shadow, margin padding;
+  -webkit-transition-duration: .1s;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 10px 12px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 10px 12px 0;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 10px 12px 0;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 10px 12px 0;
+}
+
+#todo-list .cell.hover {
+  background-color: #fffbbb;
+  /*margin-left: -1px;*/
+  margin-top: -1px;
+  /*padding-left: 1px;*/
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
 }
-  #todoapp h1 {
-    font-size: 36px;
-    font-weight: bold;
-    text-align: center;
-    padding: 20px 0 30px 0;
-    line-height: 1;
-  }
 
-#create-todo {
+
+li {
+  -moz-transition-property: left, top;
+  -moz-transition-duration: .1s;
+}
+
+.new {
+  background-color: yellow;
+}
+
+#todo-list li {
+  float: left;
+  min-width: 120px;
+  max-width: 240px;
+  margin: 5px;
+  background: white;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   position: relative;
 }
-  #create-todo input {
-    width: 466px;
-    font-size: 24px;
-    font-family: inherit;
-    line-height: 1.4em;
-    border: 0;
-    outline: none;
-    padding: 6px;
-    border: 1px solid #999999;
-    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-  }
-    #create-todo input::-webkit-input-placeholder {
-      font-style: italic;
-    }
-  #create-todo span {
-    position: absolute;
-    z-index: 999;
-    width: 170px;
-    left: 50%;
-    margin-left: -85px;
-  }
 
-#todo-list {
-  margin-top: 10px;
-}
-  #todo-list li {
-    padding: 12px 20px 11px 0;
-    position: relative;
-    font-size: 24px;
-    line-height: 1.1em;
-    border-bottom: 1px solid #cccccc;
-  }
-    #todo-list li:after {
-      content: "\0020";
-      display: block;
-      height: 0;
-      clear: both;
-      overflow: hidden;
-      visibility: hidden;
-    }
-    #todo-list li.editing {
-      padding: 0;
-      border-bottom: 0;
-    }
-  #todo-list .editing .display,
-  #todo-list .edit {
-    display: none;
-  }
-    #todo-list .editing .edit {
-      display: block;
-    }
-    #todo-list .editing input {
-      width: 444px;
-      font-size: 24px;
-      font-family: inherit;
-      margin: 0;
-      line-height: 1.6em;
-      border: 0;
-      outline: none;
-      padding: 10px 7px 0px 27px;
-      border: 1px solid #999999;
-      -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-      -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-      -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-      box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    }
   #todo-list .check {
-    position: relative;
-    top: 9px;
+    position: absolute;
+    bottom: 5px;
+    margin-left: -10px;
+    float: left;
+    visibility: collapse;
+  }
+  
+  #todo-list .checkbox_label {
+    position: absolute;
+    bottom: 4px;
+    left: 20px;
+    color: grey;
     margin: 0 10px 0 7px;
     float: left;
+    visibility: collapse;
   }
+
+  #todo-list li:hover .checkbox_label {
+    visibility: visible;
+  }
+  #todo-list li:hover .check {
+    visibility: visible;
+  }
+  
   #todo-list .done .todo-content {
     text-decoration: line-through;
     color: #777777;
   }
+  
+  .handle {
+    height: 12px;
+  }
+
+  .cell.hover .handle {
+    /*background-color: grey;*/
+  }
+  
   #todo-list .todo-destroy {
     position: absolute;
     right: 5px;
@@ -156,164 +246,60 @@ html {
       background-position: 0 -20px;
     }
 
+#todo-list .display, .edit {
+  margin: 10px;
+  margin-bottom: 0;
+  padding: 10px;
+}
+
+#todo-list .todo-content {
+  font-size: 24px;
+  font-family: inherit;
+  overflow: hidden;
+  line-height: 1.2em;
+  padding-bottom: 2em;
+}
+
+.cell:focus {
+}
+
+#todo-list .editing .display,
+#todo-list .edit {
+  display: none;
+}
+
+#todo-list .editing .edit {
+  display: block;
+}
+
+#todo-list .editing textarea {
+  width: 190px;
+  min-height: 290px;
+  font-size: 24px;
+  font-family: inherit;
+  margin: 0;
+  line-height: 1.6em;
+  border: 0;
+  outline: none;
+  margin-left: -3px;
+  margin-top: -11px;
+  overflow: hidden;
+  border: 1px solid #999999;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+}
+
+
 #todo-stats {
-  *zoom: 1;
-  margin-top: 10px;
-  color: #777777;
-}
-  #todo-stats:after {
-    content: "\0020";
-    display: block;
-    height: 0;
-    clear: both;
-    overflow: hidden;
-    visibility: hidden;
-  }
-  #todo-stats .todo-count {
-    float: left;
-  }
-    #todo-stats .todo-count .number {
-      font-weight: bold;
-      color: #333333;
-    }
-  #todo-stats .todo-clear {
-    float: right;
-  }
-    #todo-stats .todo-clear a {
-      color: #777777;
-      font-size: 12px;
-    }
-      #todo-stats .todo-clear a:visited {
-        color: #777777;
-      }
-      #todo-stats .todo-clear a:hover {
-        color: #336699;
-      }
-
-#instructions {
-  width: 520px;
-  margin: 10px auto;
-  color: #777777;
-  text-shadow: rgba(255, 255, 255, 0.8) 0 1px 0;
-  text-align: center;
-}
-  #instructions a {
-    color: #336699;
-  }
-
-#credits {
-  width: 520px;
-  margin: 30px auto;
-  color: #999;
-  text-shadow: rgba(255, 255, 255, 0.8) 0 1px 0;
-  text-align: center;
-}
-  #credits a {
-    color: #888;
-  }
-
-
-/*
- *  François 'cahnory' Germain
- */
-.ui-tooltip, .ui-tooltip-top, .ui-tooltip-right, .ui-tooltip-bottom, .ui-tooltip-left {
-  color:#ffffff;
-  cursor:normal;
-  display:-moz-inline-stack;
-  display:inline-block;
-  font-size:12px;
-  font-family:arial;
-  padding:.5em 1em;
-  position:relative;
-  text-align:center;
-  text-shadow:0 -1px 1px #111111;
-  -webkit-border-top-left-radius:4px ;
-  -webkit-border-top-right-radius:4px ;
-  -webkit-border-bottom-right-radius:4px ;
-  -webkit-border-bottom-left-radius:4px ;
-  -khtml-border-top-left-radius:4px ;
-  -khtml-border-top-right-radius:4px ;
-  -khtml-border-bottom-right-radius:4px ;
-  -khtml-border-bottom-left-radius:4px ;
-  -moz-border-radius-topleft:4px ;
-  -moz-border-radius-topright:4px ;
-  -moz-border-radius-bottomright:4px ;
-  -moz-border-radius-bottomleft:4px ;
-  border-top-left-radius:4px ;
-  border-top-right-radius:4px ;
-  border-bottom-right-radius:4px ;
-  border-bottom-left-radius:4px ;
-  -o-box-shadow:0 1px 2px #000000, inset 0 0 0 1px #222222, inset 0 2px #666666, inset 0 -2px 2px #444444;
-  -moz-box-shadow:0 1px 2px #000000, inset 0 0 0 1px #222222, inset 0 2px #666666, inset 0 -2px 2px #444444;
-  -khtml-box-shadow:0 1px 2px #000000, inset 0 0 0 1px #222222, inset 0 2px #666666, inset 0 -2px 2px #444444;
-  -webkit-box-shadow:0 1px 2px #000000, inset 0 0 0 1px #222222, inset 0 2px #666666, inset 0 -2px 2px #444444;
-  box-shadow:0 1px 2px #000000, inset 0 0 0 1px #222222, inset 0 2px #666666, inset 0 -2px 2px #444444;
-  background-color:#3b3b3b;
-  background-image:-moz-linear-gradient(top,#555555,#222222);
-  background-image:-webkit-gradient(linear,left top,left bottom,color-stop(0,#555555),color-stop(1,#222222));
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorStr=#555555,EndColorStr=#222222);
-  -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorStr=#555555,EndColorStr=#222222);
-}
-.ui-tooltip:after, .ui-tooltip-top:after, .ui-tooltip-right:after, .ui-tooltip-bottom:after, .ui-tooltip-left:after {
-  content:"\25B8";
-  display:block;
-  font-size:2em;
-  height:0;
-  line-height:0;
-  position:absolute;
-}
-.ui-tooltip:after, .ui-tooltip-bottom:after {
-  color:#2a2a2a;
-  bottom:0;
-  left:1px;
-  text-align:center;
-  text-shadow:1px 0 2px #000000;
-  -o-transform:rotate(90deg);
-  -moz-transform:rotate(90deg);
-  -khtml-transform:rotate(90deg);
-  -webkit-transform:rotate(90deg);
-  width:100%;
-}
-.ui-tooltip-top:after {
-  bottom:auto;
-  color:#4f4f4f;
-  left:-2px;
-  top:0;
-  text-align:center;
-  text-shadow:none;
-  -o-transform:rotate(-90deg);
-  -moz-transform:rotate(-90deg);
-  -khtml-transform:rotate(-90deg);
-  -webkit-transform:rotate(-90deg);
-  width:100%;
-}
-.ui-tooltip-right:after {
-  color:#222222;
-  right:-0.375em;
-  top:50%;
-  margin-top:-.05em;
-  text-shadow:0 1px 2px #000000;
-  -o-transform:rotate(0);
-  -moz-transform:rotate(0);
-  -khtml-transform:rotate(0);
-  -webkit-transform:rotate(0);
-}
-.ui-tooltip-left:after {
-  color:#222222;
-  left:-0.375em;
-  top:50%;
-  margin-top:.1em;
-  text-shadow:0 -1px 2px #000000;
-  -o-transform:rotate(180deg);
-  -moz-transform:rotate(180deg);
-  -khtml-transform:rotate(180deg);
-  -webkit-transform:rotate(180deg);
+  display: block;
+  clear: both;
 }
 
-
-#feedback { font-size: 1.4em; }
-.todo .ui-selecting { background: #FECA40; }
-.todo .ui-selected { background: #F39814; color: white; }
-/*#todos { list-style-type: none; margin: 0; padding: 0; width: 60%; }*/
-/*#todos li { margin: 3px; padding: 0.4em; font-size: 1.4em; height: 18px; }*/
-
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+  width: 0 !important;
+  min-width: 0 !important;
+}
