--- a/static/todos.css
+++ b/static/todos.css
@@ -10,10 +10,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   padding: 0;
   border: 0;
   outline: 0;
-  /*font-weight: inherit;*/
-  /*font-style: inherit;*/
   font-size: 100%;
-  /*font-family: inherit;*/
   vertical-align: baseline;
 }
 body {
@@ -28,28 +25,15 @@ body {
 
 button.button {
   padding: 1ex;
-  border: 1px solid grey;
+  border: none;
   font-size: 16px;
-  background-color: lightgrey;
-  /*margin: 20px;*/
-  /*margin-bottom: 18px;*/
+  background: transparent;
   display: inline;
-  border-radius: 3px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0;
-  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0;
 }
 
 
 button.button.disabled {
   color: grey;
-  background-color: #eee;
-  border-color: #ccc;
-  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
-  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
 }
 
 .underline {
@@ -58,18 +42,14 @@ button.button.disabled {
 }
 
 button.button:hover {
-  background-color: #ddd;
+  /*background-color: #ddd;*/
+  text-decoration: underline;
+  color: darkblue;
 }
 
 button.button.disabled:hover {
-  background-color: #eee;
-}
-
-button.button:active {
-  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
-  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
+  text-decoration: none;
+  color: grey;
 }
 
 ol, ul {
@@ -97,7 +77,7 @@ a:hover {
 #logout {
   position: absolute;
   right: 0;
-  top: 2em;
+  top: 0;
 }
 
 #todoapp {
@@ -115,14 +95,10 @@ a:hover {
   line-height: 1;
 }
 
-#todos {
-  margin-top: 2em;
-}
-
 #todo-list {
   padding: 1em;
   background-color: #eeeeee;
-  min-height: 40em;
+  min-height: 25em;
   border: 1px solid #999999;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0 inset;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px 0 inset;
@@ -210,20 +186,43 @@ a:hover {
   margin-left: -85px;
 }
 
+#todos {
+  /*position: relative;*/
+  /*padding-right: 2em;*/
+  display: inline-block;
+}
+
+#tabbar {
+  vertical-align: top;
+  display: inline-block;
+  width: 5em;
+}
+
 #main {
-  position: relative;
-  padding-right: 2em;
+  padding-top: 1em;
+}
+#tabbar .toggle {
+  width: 4em;
+  background-color: white;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
+  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0px 0px 0;
+}
+
+.toggle.current {
+  font-weight: bold;
 }
 
 #todos {
   display: inline-block;
-  width: 85%;
+  min-width: 500px;
+  width: 77%;
 }
 
 #tags {
-  position: absolute;
-  top: 2em;
-  right: 1em;
+  display: inline-block;
+  vertical-align: top;
   width: 13%;
 }
 
@@ -254,11 +253,6 @@ div.tagname {
 
 #todo-list .cell.selected, #todo-list .cell.hover.selected {
   background-color: #fffd7f;
-  /*margin-left: 1px;*/
-  /*margin-top: 1px;*/
-  /*margin-left: -2px;*/
-  /*margin-top: -2px;*/
-  /*padding-left: 2px;*/
   -moz-transition-property: box-shadow, margin padding;
   -moz-transition-duration: .1s;
   -webkit-transition-property: box-shadow, margin padding;
@@ -272,9 +266,6 @@ div.tagname {
 
 #todo-list .cell.hover {
   background-color: #fffbbb;
-  /*margin-left: -1px;*/
-  /*margin-top: -1px;*/
-  /*padding-left: 1px;*/
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0 5px 6px 0;
@@ -359,10 +350,6 @@ li {
     height: 12px;
   }
 
-  .cell.hover .handle {
-    /*background-color: grey;*/
-  }
-  
   #todo-list .todo-destroy {
     position: absolute;
     right: 5px;
@@ -406,15 +393,13 @@ li {
 
 #todo-list .editing textarea {
   width: 120px;
-  min-height: 290px;
-  font-size: 24px;
   font-family: inherit;
   margin: 0;
   line-height: 1.6em;
   border: 0;
   outline: none;
   margin-left: -3px;
-  margin-top: -11px;
+  margin-top: -3px;
   overflow: hidden;
   border: 1px solid #999999;
   -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
