--- a/static/todos.css
+++ b/static/todos.css
@@ -108,11 +108,13 @@ a:hover {
 
 #create-todo {
   position: relative;
-  width: 100%;
+  width: 75%;
+  padding-left: 5em;
+  padding-top: 1em;
 }
 
 #filter {
-  width: 366px;
+  width: 166px;
   font-size: 16px !important;
   font-family: inherit;
   line-height: 1.4em;
@@ -199,7 +201,6 @@ a:hover {
 }
 
 #main {
-  padding-top: 1em;
 }
 #tabbar .toggle {
   width: 4em;
